add modernizer basic version

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
-s<!doctype html>
-<html lang="en">
+<!doctype html>
+<html lang="en" class="no-js">
 
 <head>
 <meta charset="utf-8">
@@ -12,7 +12,7 @@ s<!doctype html>
 <link rel="stylesheet" href="css/main.css">
 
 <!-- Development Version of modernizr.js – use custom build for production -->
-<script src="js/modernizr.js"></script>
+<script src="js/modernizr-custom.js"></script>
 	
 </head>
 
