--- a/index.html
+++ b/index.html
@@ -9,49 +9,74 @@
 
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 
+<link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
+
 <link rel="stylesheet" href="css/main.css">
 
 <!-- Development Version of modernizr.js – use custom build for production -->
-<script src="js/modernizr-custom.js"></script>
-	
+<script src="/assets/js/modernizr-custom.js"></script>
+
 </head>
 
 <body>
 
 <div id="wrap">
 
+<div class="menu-wrap">
+
 <header>
 	<h1 id="logo"><a href="/">Logo</a></h1>
 </header>
-	
-<nav>
-<ul>
-	<li><a href="#">nav</a></li>
-	<li><a href="#">nav</a></li>
-	<li><a href="#">nav</a></li>
-	<li><a href="#">nav</a></li>
-</ul>
-</nav>
 
-<div id="main">
-	
-<article>
-<h2>Hello world!</h2>
-<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-</article>
+<div class="inner">
 
-</div> <!-- #main -->
+<a href="#menu" class="menu-link">Menu</a>
+
+	<nav id="main" role="navigation">
+		<ul class="menu">
+			<li><a href="#">Home</a></li>
+			<li><a href="#">Projects</a></li>
+			<li><a href="#">Services</a></li>
+			<li><a href="#">About</a></li>
+			<li><a href="#">Contact</a></li>
+		</ul>
+	</nav>
+</div>
+
+</div> <!-- .menu-wrap -->
+
+<div id="content">
+
+<div class="inner">
+
+	<article>
+		<h2>Hello world!</h2>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+	</article>
+
+</div>
+
+</div> <!-- #content -->
+
+<div class="inner">
 
 <footer>
-<ul>
-	<li><a href="#">nav</a></li>
-	<li><a href="#">nav</a></li>
-	<li><a href="#">nav</a></li>
-	<li><a href="#">nav</a></li>
-</ul>	
+	<ul>
+		<li><a href="#">Home</a></li>
+		<li><a href="#">Imprint</a></li>
+		<li><a href="#">© 2017</a></li>
+	</ul>
 </footer>
 
+</div>
+
 </div> <!-- #wrap -->
+
+<!-- #js -->
+
+<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+<script src="/assets/js/nav-toggle.js"></script>
+<script src="/assets/js/unslider-min.js"></script>
 
 </body>
 </html>
