--- a/index.html
+++ b/index.html
@@ -13,9 +13,6 @@
 
 <link rel="stylesheet" href="css/main.css">
 
-<!-- Development Version of modernizr.js – use custom build for production -->
-<script src="/assets/js/modernizr-custom.js"></script>
-
 </head>
 
 <body>
@@ -25,22 +22,22 @@
 <div class="menu-wrap">
 
 <header>
-	<h1 id="logo"><a href="/">Logo</a></h1>
+  <h1 id="logo"><a href="/">Logo</a></h1>
 </header>
+
+<button id="navicon" class="reset-button">Menu Link</button>
 
 <div class="inner">
 
-<a href="#menu" class="menu-link">Menu</a>
-
-	<nav id="main" role="navigation">
-		<ul class="menu">
-			<li><a href="#">Home</a></li>
-			<li><a href="#">Projects</a></li>
-			<li><a href="#">Services</a></li>
-			<li><a href="#">About</a></li>
-			<li><a href="#">Contact</a></li>
-		</ul>
-	</nav>
+  <nav id="mainnav" class="shown" role="navigation">
+    <ul class="menu">
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Projects</a></li>
+      <li><a href="#">Services</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
 </div>
 
 </div> <!-- .menu-wrap -->
@@ -49,10 +46,17 @@
 
 <div class="inner">
 
-	<article>
-		<h2>Hello world!</h2>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-	</article>
+  <article>
+    <h1>Hello world!</h1>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h2>Header 2</h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h3>Header 3</h3>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+    <h4>Header 4</h4>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+  </article>
 
 </div>
 
@@ -61,22 +65,31 @@
 <div class="inner">
 
 <footer>
-	<ul>
-		<li><a href="#">Home</a></li>
-		<li><a href="#">Imprint</a></li>
-		<li><a href="#">© 2017</a></li>
-	</ul>
+  <ul>
+    <li><a href="#">Home</a></li>
+    <li><a href="#">Imprint</a></li>
+    <li><a href="#">© 2017</a></li>
+  </ul>
 </footer>
 
 </div>
 
 </div> <!-- #wrap -->
 
-<!-- #js -->
+<script type="text/javascript">
 
-<script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
-<script src="/assets/js/nav-toggle.js"></script>
-<script src="/assets/js/unslider-min.js"></script>
+  <!-- main nav toggle -->
+  var navicon = document.getElementById('navicon');
+  var mainnav = document.getElementById('mainnav');
+
+  function toggleNav() {
+    mainnav.classList.toggle('hidden');
+  };
+
+  navicon.addEventListener("click", toggleNav, false);
+
+</script>
+
 
 </body>
 </html>
