--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
 
-<link rel="stylesheet" href="css/main.css">
+<link rel="stylesheet" href="assets/css/main.css">
 
 </head>
 
