--- a/index.html
+++ b/index.html
@@ -1,96 +1,76 @@
-<!doctype html>
-<html lang="en" class="no-js">
+<!DOCTYPE html>
+<html lang="en">
 
-<head>
 <meta charset="utf-8">
-<title>#</title>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="">
+
+<link rel="icon" type="image/png" href="/favicon.png">
+
+<title>Index</title>
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
-
 <link href="https://fonts.googleapis.com/css?family=Montserrat:400,700" rel="stylesheet">
-
 <link rel="stylesheet" href="assets/css/main.css">
 
 </head>
 
 <body>
 
-<div id="wrap">
+  <div class="container">
 
-<div class="menu-wrap">
+    <header>
 
-<header>
-  <div id="logo"><a href="/">Logo</a></div>
-</header>
+      <button id="navicon" class="reset-button">Menu</button>
 
-<button id="navicon" class="reset-button">Menu Link</button>
+      <div class="mainnav mainnav--closed">
+        <nav>
+          <h1 class="mainnav__home"><a href="/">Home</a></h1>
+          <ul class="mainnav__menu">
+            <li><a href="#">Projects</a></li>
+            <li><a href="#">Services</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+          </ul>
+        </nav>
+      </div>
 
-<div class="inner">
+    </header>
 
-  <nav id="mainnav" class="hidden" role="navigation">
-    <ul class="menu">
-      <li><a href="#">Home</a></li>
-      <li><a href="#">Projects</a></li>
-      <li><a href="#">Services</a></li>
-      <li><a href="#">About</a></li>
-      <li><a href="#">Contact</a></li>
-    </ul>
-  </nav>
-</div>
+    <main>
 
-</div> <!-- .menu-wrap -->
+      <div class="inner">
 
-<div id="content">
+        <article>
 
-<div class="inner">
+          <h1>Hello world!</h1>
+          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et
+            dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex
+            ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat
+            nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit
+            anim id est laborum.</p>
 
-  <article>
+        </article>
 
-    <h1>Hello world!</h1>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <h2>Header 2</h2>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <h3>Header 3</h3>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-    <h4>Header 4</h4>
-    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
 
-  </article>
+    </main>
 
-</div>
+    <footer>
+      <nav>
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Imprint</a></li>
+          <li><a href="#">© 2019</a></li>
+        </ul>
+      </nav>
+    </footer>
 
-</div> <!-- #content -->
+  </div> <!-- container -->
 
-<div class="inner">
-
-<footer>
-  <ul>
-    <li><a href="#">Home</a></li>
-    <li><a href="#">Imprint</a></li>
-    <li><a href="#">© 2017</a></li>
-  </ul>
-</footer>
-
-</div>
-
-</div> <!-- #wrap -->
-
-<script type="text/javascript">
-
-  <!-- main nav toggle -->
-  var navicon = document.getElementById('navicon');
-  var mainnav = document.getElementById('mainnav');
-
-  function toggleNav() {
-    mainnav.classList.toggle('hidden');
-  };
-
-  navicon.addEventListener("click", toggleNav, false);
-
-</script>
-
+  <script src="assets/js/toggle.js"></script>
 
 </body>
+
 </html>
