--- a/index.html
+++ b/index.html
@@ -22,7 +22,15 @@
 
     <header>
 
-      <button id="navicon" class="reset-button">Menu</button>
+      <!-- 
+      Simple Text Link instead of hamburger:
+      <button id="navicon" class="reset-button">Menu</button> -->
+
+      <button id="navicon" class="hamburger hamburger--collapse" type="button">
+        <span class="hamburger-box">
+          <span class="hamburger-inner"></span>
+        </span>
+      </button>
 
       <div class="mainnav mainnav--closed">
         <nav>
